--- a/public/css/slider1.css
+++ b/public/css/slider1.css
@@ -48,8 +48,9 @@
   line-height: 1;
   z-index: 5;
   transition: all 0.2s linear;
+  background-color: rgb(178, 170, 170);
 }
-.slick-arrow:hover{
+.slick-arrow:hover, .slick-arrow:active{
   background-color: rgb(246,183,78);
   color:white;
 }
