--- a/public/css/privacy.css
+++ b/public/css/privacy.css
@@ -8,7 +8,10 @@ h1{font-weight: 800;font-size: 40px; line-height: 1.2;}
 .inside-article .entry-content{margin: 30px 0px;}
 .entry-content h2{font-size: 30px;word-wrap: break-word; line-height: 1.3;margin-bottom: 15px;}
 .entry-content p{font-size: 20px;line-height: 1.3;margin-bottom: 15px;}
-
+#privacy .title h1{
+    font-family: var(--FontPrimary),sans-serif;
+    color:red;
+}
 @media only screen and (max-width: 1200px) {
     *{margin: 0; padding: 0;}
     #privacy {width: 80%;}
