--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -10,11 +10,10 @@
 .nav .row1 .widtht { width: 200px; }
 .nav .row1 li a { font-size: 15px; color:var(--TextColor); }
 .nav .row1 li img { width: 35px; height: 100%;   margin-top: 30px; transform: translate(0px, -11px); }
-.nav .row2 .menu { width: 70%; display: flex; position: absolute; z-index: 9; }
+.nav .row2 .menu { width: 75%; display: flex; position: absolute; z-index: 9; }
 .nav .row2 {width: 100%;display: flex;height: 50px;background-color: rgb(37, 37, 60);align-items: center;position: relative;z-index: 20;}
 .nav .row2  li { width: 193px; border-right: 1px solid white; line-height: 50px; /*padding-left: 10px;*/ }
 .nav .row2 li a{ color:white;}
-
 
 .nav .row2 li a span { margin-left: 7px; }
 .nav .row2 li img#logo { width: 100px; margin-top: 0px; margin-left: 25px; }
@@ -33,7 +32,7 @@
 .menu li:hover a span { color: rgb(242, 89, 136); }
 
 /* darkMode */
-body.dark{
+/* body.dark{
   --TextColor: white;
   --BackgroundColor:black;
   background-color: black;
@@ -77,7 +76,7 @@ body.dark{
   opacity: 1;
   color:yellow;
   pointer-events:auto;
-}
+} */
 /* end of darkMode */
 /* search button */
 .search__container{
@@ -212,16 +211,16 @@ body.dark{
     width: 100%;
   }
 }
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1380px) {
     
     .nav{position: fixed;}
-    .nav .row2 .menu { display: block; background: rgb(37, 37, 61); width: 200px; }
+    .nav .row2 .menu { display: block; background: rgb(37, 37, 61); width: 200px; height: 100%;}
     .main-nav {display: block;}
     .row2 span { margin-left: 0px !important; }
     .row2 li a { text-align: center; }
     ul.row2 { position: absolute; margin-left: -100%; transition: all 0.4s ease 0s; top: 36px; display: block !important; height: 36% !important; width: 385px !important; }
-    ul.row2 li { text-align: center; border-right: none !important; padding-left: 0px !important;}
-    li.admin { position: absolute; }
+    ul.row2 li { text-align: center; border-right: none !important; padding-left: 0px !important; background: rgb(37, 37, 61);}
+    li.admin {background: none !important; right:-2% !important;}
     ul.row2 li img { display: none; }
     .menu2:before{
       display: none;}
