--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -4,8 +4,8 @@
 #contact {width: 50%; margin: 100px auto; font-family: tahoma;}
 .ctLogo{margin: 10px; justify-content: center; display: flex;}
 .ctLogo img{max-width: 255px;}
-.text p, span{font-size: 0.9rem;}
-.text h3{color: red; font-size: 2rem; margin-bottom: 10px;}
+.text p, span{font-size: 0.9rem;text-indent: 20px;}
+.text h3{color: red; font-size: 2rem; margin-bottom: 10px;text-align: center; font-family: var(--FontPrimary);}
 .text{margin: 20px 0px;}
 .text b{color: rgb(107, 99, 99);}
 .form__group{margin: 15px 0px;}
